[package]
name = "intelli-nftables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["form", "macros", "multipart", "headers"] }
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = "0.4.4"
